--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ body{
     height:500px;
     z-index: 1;
     color:white;
+    font-size:14px;
 }
 .expand_weather_head{
     position: relative;
